--- a/praktikum-1/tugas-1.ipynb
+++ b/praktikum-1/tugas-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color: lightskyblue\">Praktikum 1: Aproksimasi, Kesalahan, dan Deret Taylor</h1>\n",
+    "<h1 style=\"background-color: lightskyblue; color:black\">Praktikum 1: Aproksimasi, Kesalahan, dan Deret Taylor</h1>\n",
     "\n",
     "<p>Anggota: </p>\n",
     "<ol>\n",
@@ -395,12 +395,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h5>Penurunan Formula 3 dari Formula 2</h5>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x_{1,2} = \\frac{-b\\pm\\sqrt{b^2 - 4ac}}{2a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x_{1,2} = \\frac{-b\\pm\\sqrt{b^2 - 4ac}}{2a}(\\frac{+b\\pm\\sqrt{b^2-4ac}}{+b\\pm\\sqrt{b^2-4ac}})\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x_{1,2} = \\frac{-b^2+b^2-4ac}{2a(b\\pm\\sqrt{b^2-4ac})}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x_{1,2} = \\frac{-2c}{b\\pm\\sqrt{b^2-4ac}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h5>Terbukti</h5>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3><mark style=\"background-color: lightskyblue\">SOAL 5</mark></h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -417,6 +467,7 @@
       "       0.5000003040      0.0000608001\n",
       "       0.4999999878      0.0000024403\n",
       "--------------------------------------------------------\n",
+      "0.500000000000000\n",
       "<class 'sympy.core.numbers.Float'>\n",
       "--------------------------------------------------------\n"
      ]
@@ -453,6 +504,7 @@
     "    \n",
     "f_true = N(f.subs({x: xip1}))\n",
     "print(\"--------------------------------------------------------\")\n",
+    "print(f_true)\n",
     "print(type(f_true))\n",
     "print(\"--------------------------------------------------------\")"
    ]
